--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "meanjs",
-  "description": "Fullstack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "quillive",
+  "description": "Backend for Quillive",
   "homepage": "http://meanjs.org/",
   "license": "MIT",
   "dependencies": {
