--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "quillive",
+  "description": "Backend for Quillive",
   "version": "0.4.2",
   "meanjs-version": "0.4.2",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "Raykarj",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "grunt-cli": "~0.1.13",
     "helmet": "~0.9.1",
     "jasmine-core": "^2.3.4",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^3.10.0",
     "method-override": "^2.3.3",
     "mocha": "~1.20.0",
@@ -54,6 +55,7 @@
     "passport-facebook": "^2.0.0",
     "passport-github": "~0.1.5",
     "passport-google-oauth": "~0.2.0",
+    "passport-jwt": "^2.2.0",
     "passport-linkedin": "~0.1.3",
     "passport-local": "^1.0.0",
     "passport-paypal-openidconnect": "^0.1.1",
